[package]
name = "reqs"
version = "0.1.0"
authors = ["runner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
reqwest = { version = "0.11.0", features = ["stream"] }
futures-util = "0.3.10"